add commonGoalDeck in Game